# ChangeLog for sys-devel/gcc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.879 2012/05/25 17:27:30 vapier Exp $

  25 May 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.6.2.ebuild,
  gcc-4.6.3.ebuild, gcc-4.7.0.ebuild:
  Update x32 support.

  22 May 2012; Ryan Hill <dirtyepic@gentoo.org> gcc-4.6.0.ebuild,
  gcc-4.6.1-r1.ebuild, gcc-4.6.2.ebuild, gcc-4.6.3.ebuild:
  Keyword for all but amd64.

*gcc-4.7.0 (22 May 2012)

  22 May 2012; Ryan Hill <dirtyepic@gentoo.org> -gcc-4.5.3-r1.ebuild,
  +gcc-4.7.0.ebuild:
  Version bump (bug #409315).

  18 May 2012; Mike Frysinger <vapier@gentoo.org> files/fix_libtool_files.sh:
  Use `.` rather than `source` now that we use /bin/sh as pointed out by pesa.

  15 May 2012; Mike Frysinger <vapier@gentoo.org> files/fix_libtool_files.sh:
  Use awk file in /usr/share/gcc-data and tweak the code to be POSIX since it is
  so simple. #415947 by Jim Faulkner.

  11 May 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.5.3-r2.ebuild,
  gcc-4.6.3.ebuild:
  Push out FreeBSD PIE fix #415185 by Alexis Ballier.

  10 May 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.5.3-r2.ebuild,
  gcc-4.6.3.ebuild:
  Push out hppa 64bit fix #382075 by Jeroen Roovers, and new arm hardfp ldso
  path.

  06 May 2012; Raúl Porcel <armin76@gentoo.org> gcc-4.3.6-r1.ebuild,
  gcc-4.4.6-r1.ebuild, gcc-4.5.3-r2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #405845, #405849, #402847

  10 May 2012; Fabian Groffen <grobian@gentoo.org>
  -files/4.4.1/gcc-4.4.1-T-namespace.patch,
  -files/4.4.4/gcc-4.4.4-T-namespace.patch, gcc-4.4.6-r1.ebuild,
  gcc-4.5.3-r1.ebuild, gcc-4.5.3-r2.ebuild, gcc-4.6.3.ebuild:
  Strip -mcpu=/-mtune= flags on PowerPC/Darwin hosts, drop obsolete T-namespace
  patch (handled better by eclass now), don't override CONFIG_SHELL if it's
  already set by the user

  08 May 2012; Fabian Groffen <grobian@gentoo.org> gcc-4.6.3.ebuild: